--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</style>
 	</noscript>
 	<!-- This site is optimized with the Yoast SEO plugin v16.4 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Уничтожение насекомых</title>
+	<title>Уничтожение</title>
 	<link rel="canonical" href="index.html">
 	<meta property="og:locale" content="ru_RU">
 	<meta property="og:type" content="website">
